tests/test_proof/good/enums.catala_en
## Test

```catala
declaration enumeration T:
   -- C content boolean
   -- D content integer

declaration enumeration S:
    -- A content integer
    -- B content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals B content (D content 1)
  definition x under condition match y with pattern -- A of a: true -- B of b: false consequence equals 0
  definition x under condition match y with pattern -- A of a: false -- B of b: true consequence equals 1
```