tests/test_proof/bad/no_vars-conflict.catala_en
## Test

Should fail since y has two definitions when x = 0

```catala
declaration scope A:
  context x content integer
  context y content integer

scope A:
  definition x under condition (6*7 = 42) and (false or (true and 1458 / 27 = 54))
  consequence equals 0

  definition y under condition x <= 0 consequence equals -1
  definition y under condition x >= 0 consequence equals 1
  
```